# ndcube

./: .codecov.yaml  .codespellrc  .coveragerc  .cruft.json  .flake8  .gitignore  .gitmodules  .isort.cfg  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  .sunpy-template.yml  .travis.yml  .zenodo.json  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.rst  RELEASE.rst  __init__.py  appveyor.yml  azure-pipelines.yml  azure-templates.yml  pyproject.toml  pytest.ini  pytest.ini.rej  setup.cfg  setup.py  tox.ini  tox.ini.rej  wcs_util.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  draft-pdf.yml  scheduled_builds.yml  stale_bot.yml  sub_package_update.yml
changelog/: 151.feature.rst  157.feature.rst  158.trivial.rst  164.bugfix.rst  174.feature.rst  175.feature.rst  176.bugfix.rst  182.bugfix.rst  204.bugfix.rst  212.bugfix.rst  223.bugfix.rst  224.bugfix.rst  231.feature.rst  241.bugfix.rst  251.trivial.rst  262.trivial.rst  264.bugfix.rst  266.feature.rst  269.bugfix.rst  271.feature.rst  278.bugfix.rst  279.feature.rst  280.breaking.rst  281.feature.rst  287.bugfix.rst  293.bugfix.rst  294.breaking.1.rst  294.breaking.2.rst  294.bugfix.rst  300.removal.rst  301.feature.rst  302.breaking.rst  302.removal.rst  303.bugfix.rst  306.bugfix.rst  308.bugfix.rst  309.feature.2.rst  309.feature.rst  310.bugfix.rst  311.breaking.rst  (+157 more)
cube/: CubeND.py  NDCube.py  NDCube_utils.py  __init__.py  cube_utils.py  datacube.py
cube/tests/: test_NDCube.py  test_NDCubeSequence.py  test_cube.py  test_cube_utils.py  test_cubesequence.py
docs/: 1_to_2_transition_guide.rst  acknowledging.rst  api.rst  conf.py  contributing.rst  coordinates.rst  data_classes.rst  extending_ndcube.rst  getting_help.rst  index.rst  installation.rst  introduction.rst  ndcollection.rst  ndcube.rst  ndcubesequence.rst  nitpick-exceptions  reproject.rst  rtd_requirements.txt  slicing.rst  tabular_coordinates.rst  visualization.rst
docs/code_blocks/: .define_sequence_simple_components.rst.swp  .instantiate_ndcube.rst.swp  define_sequence_simple_components.rst  instantiate_ndcube.rst  instantiate_simple_ndcube.rst
docs/explaining_ndcube/: arithmetic.rst  arithmetic_operations.rst  asdf_serialization.rst  coordinates.rst  data_classes.rst  index.rst  metadata.rst  reproject.rst  slicing.rst  tabular_coordinates.rst  visualization.rst
docs/reference/: extra_coords.rst  index.rst  meta.rst  mixins.rst  ndcube.rst  tests.rst  utils.rst  visualization.rst  wcs.rst
docs/sample_code/: fuller_ndcube.py  ndcube_data_wcs.py  ndcube_uncert_mask_meta_unit.py  simple_ndcube.py
examples/: README.txt  changing_resolution_via_reproject.py  creating_a_gwcs_from_quantities.py  creating_even_spaced_wavelength_visualisation.py  creating_ndcube_from_fitsfile.py  dynamic_spectrum.py  ndcube_from_radio_images_example.py  slicing_ndcube.py  upscaling_resolution_via_reproject.py
examples/dev/: example_template.py
joss_paper/: paper.bib  paper.md
licenses/: LICENSE.rst
ndcube/: __init__.py  _sunpy_init.py  conftest.py  coords.py  cube_utils.py  extra_coords.py  global_coords.py  mask.py  meta.py  ndcollection.py  ndcube.py  ndcube_sequence.py  plot_helpers.py  version.py  wcs_util.py
ndcube/_dev/: __init__.py  scm_version.py
ndcube/analysis/: .rebin.py.swp  rebin.py
ndcube/asdf/: entry_points.py
ndcube/asdf/converters/: compoundwcs_converter.py  extracoords_converter.py  globalcoords_converter.py  ndcollection_converter.py  ndcube_converter.py  ndcubesequence_converter.py  ndmeta_converter.py  reorderedwcs_converter.py  resampled_converter.py  tablecoord_converter.py
ndcube/extra_coords/: __init__.py  extra_coords.py  lookup_table_coord.py  table_coord.py
ndcube/extra_coords/tests/: test_extra_coords.py  test_lookup_table_coord.py
ndcube/global_coords/: __init__.py  global_coords.py
ndcube/mixins/: __init__.py  ndcubeio.py  ndslicing.py  plotting.py  plotting_utils.py  sequence_plotting.py
ndcube/mixins/tests/: test_ndslicing.py
ndcube/tests/: __init__.py  conftest.py  coveragerc  figure_hashes_mpl_332_ft_261_astropy_41_sunpy_203.json  figure_hashes_mpl_332_ft_261_astropy_dev_sunpy_dev.json  fits2gwcs.py  helpers.py  test_NDCube.py  test_NDCubeSequence.py  test_cube_utils.py  test_extra_coords.py  test_global_coords.py  test_lookup_table_coord.py  test_mask.py  test_meta.py  test_ndcollection.py  test_ndcube.py  test_ndcube_arithmetic.py  test_ndcube_axis_world_coords.py  test_ndcube_dynspec.py  test_ndcube_reproject_and_rebin.py  test_ndcube_slice_and_crop.py  test_ndcubeio.py  test_ndcubesequence.py  test_plotting.py  test_plotting_utils.py  test_sequence_plotting.py  test_utils_collection.py  test_utils_cube.py  test_utils_sequence.py  test_utils_wcs.py
ndcube/utils/: __init__.py  collection.py  cube.py  decorators.py  exceptions.py  misc.py  sequence.py  wcs.py  wcs_high_level_conversion.py
ndcube/utils/sphinx/: code_context.py
ndcube/utils/tests/: test_utils_collection.py  test_utils_cube.py  test_utils_sequence.py  test_utils_wcs.py
ndcube/visualization/: __init__.py  animation.py  base.py  base_sequence.py  descriptor.py  mpl_plotter.py  mpl_sequence_plotter.py  mpl_visualizer.py  plotting_utils.py  sequence_mpl_plotter.py
ndcube/visualization/animator/: __init__.py  base.py  image.py  modest_image.py  wcs.py
ndcube/visualization/tests/: figure_hashes_mpl_3100_ft_261_astropy_710_animators_124.json  figure_hashes_mpl_332_ft_261_astropy_421_animators_100.json  figure_hashes_mpl_332_ft_261_astropy_dev_animators_dev.json  figure_hashes_mpl_352_ft_261_astropy_dev_animators_dev.json  figure_hashes_mpl_372_ft_261_astropy_533_animators_100.json  figure_hashes_mpl_382_ft_261_astropy_600_animators_111.json  figure_hashes_mpl_dev_ft_2143_astropy_dev_animators_dev.json  test_plotting.py  (+2 more)
ndcube/wcs/: __init__.py  tools.py  wcs_tools.py
spectra/: __init__.py  spectral_cube.py  spectrogram.py  spectrum.py
spectra/tests/: test_spectrogram.py
visualization/: __init__.py  animation.py
(+61 files in other folders)
