[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ndcube"
description = "A package for multi-dimensional contiguous and non-contiguous coordinate aware arrays."
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "astropy>=5.0.6,!=5.1.0",
  "gwcs>=0.18",
  "numpy>=1.23.0",
  "dask"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "dask",
  "pytest",
  "pytest-astropy",
  "pytest-doctestplus",
  "pytest-mpl>=0.12",
  "pytest-xdist",
  "scipy",
  "sunpy>=5.0.0"
]
docs = [
  "matplotlib",
  "mpl-animators>=1.0",
  "sphinx<7.3.0",
  "sphinx-automodapi",
  "sphinx-changelog>=1.1.0",
  "sphinx-gallery",
  "sphinxext-opengraph",
  "sunpy-sphinx-theme",
  "sunpy>=5.0.0"
]
plotting = [
  "matplotlib>=3.5.0",
  "mpl_animators>=1.0",
]
reproject = [
  "reproject>=0.7.1",
]
all = [
  "ndcube[plotting, reproject]",
]
[project.urls]
repository = "https://docs.sunpy.org/projects/ndcube"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["ndcube._dev*"]

[tool.setuptools_scm]
write_to = "ndcube/_version.py"

[tool.towncrier]
    package = "ndcube"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/sunpy/ndcube/pull/{issue}>`__"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backwards Incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Deprecations and Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Improved Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Trivial/Internal Changes"
      showcontent = true

[ tool.gilesbot ]
  [ tool.gilesbot.circleci_artifacts ]
    enabled = true

  [ tool.gilesbot.circleci_artifacts.figure_report ]
    url = ".tmp/py310-figure/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons, for py310-figure."
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.figure_report_devdeps ]
    url = ".tmp/py310-figure-devdeps/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons for py310-figure-devdeps."
    report_on_fail = true

  [ tool.gilesbot.pull_requests ]
    enabled = true

  [ tool.gilesbot.towncrier_changelog ]
    enabled = true
    verify_pr_number = true
    changelog_skip_label = "No Changelog Entry Needed"
    help_url = "https://github.com/sunpy/sunpy/blob/main/changelog/README.rst"
    changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/sunpy/blob/main/changelog/README.rst)."
    type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/ndcube/blob/main/changelog/README.rst)"
    number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

  [ tool.gilesbot.milestones ]
    enabled = true
    missing_message_long = "This pull request does not have a milestone assigned to it. Only maintainers can change this, so you don't need to worry about it. :smile:"
