[metadata]
name = ndcube
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_file = LICENSE.rst
url = http://docs.sunpy.org/projects/ndcube/
description = A package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
  astropy>=4.1
  matplotlib>=3
  gwcs>=0.15

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-mpl>=0.12
    sphinx
docs =
    sphinx
    sphinx-automodapi
    sunpy-sphinx-theme
    pytest-doctestplus>=0.9.0  # First version with the sphinx ext
    sphinx-changelog
animate =
    sunpy>=2.0rc1

[tool:pytest]
testpaths = "ndcube" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
text_file_format = rst
mpl-results-path = figure_test_images
mpl-use-full-test-name = True
addopts = --doctest-rst
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    array_compare
    mpl_image_compare
remote_data_strict = True
filterwarnings =
    ignore
    always::DeprecationWarning
    error::astropy.utils.exceptions.AstropyDeprecationWarning
    error::sunpy.util.exceptions.SunpyDeprecationWarning

[flake8]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
max-line-length = 110

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
max_line_length = 110

[isort]
line_length = 110
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = ndcube
known_third_party = astropy,matplotlib,numpy,pytest,setuptools
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = False
length_sort = False
length_sort_sections = stdlib
skip_glob = *.rst --filter-files

[coverage:run]
omit =
  ndcube/conftest.py
  ndcube/*setup_package*
  ndcube/tests/*
  ndcube/*/tests/*
  ndcube/extern/*
  ndcube/version*
  */ndcube/conftest.py
  */ndcube/*setup_package*
  */ndcube/tests/*
  */ndcube/*/tests/*
  */ndcube/extern/*
  */ndcube/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
