[metadata]
name = ndcube
provides = ndcube
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_files = LICENSE.rst
url = https://docs.sunpy.org/projects/ndcube/
download_url = https://pypi.org/project/ndcube/
project_urls=
  Source Code = https://github.com/sunpy/ndcube/
  Documentation = https://docs.sunpy.org/projects/ndcube/
  Changelog = https://docs.sunpy.org/projects/ndcube/en/stable/whatsnew/changelog.html
  Issue Tracker = https://github.com/sunpy/ndcube/issues
description = A package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = sunpy/ndcube
platform = any
keywords = nddata, science, sun, wcs, gwcs, coordinates, sunpy, astropy, solar, spectroscopy
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
  astropy>=4.2
  gwcs>=0.15
  numpy>1.17

[options.extras_require]
tests =
    pytest
    pytest-astropy
    pytest-mpl>=0.12
    sunpy>=4.0.0
    dask
docs =
    matplotlib
    pytest-doctestplus>=0.9.0
    sphinx
    sphinx-automodapi
    sphinx-changelog>=1.1.0
    sphinx-gallery
    sphinxext-opengraph
    sunpy-sphinx-theme
plotting =
    matplotlib>=3.2
    mpl_animators>=1.0
reproject =
    reproject>=0.7.1
    # Not a direct dependency, but we need to pin this until sphinx-changelog is updated (see https://github.com/sunpy/sunpy/issues/6668)
    towncrier<22.12.0

[options.packages.find]
exclude = ndcube._dev

[tool:pytest]
testpaths = "ndcube" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
text_file_format = rst
mpl-results-path = figure_test_images
mpl-use-full-test-name = True
addopts = -m "not mpl_image_compare" --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
remote_data_strict = True
filterwarnings =
    error
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    #
    # This is due to dependencies building with a numpy version different from
    # the local installed numpy version, but should be fine
    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    # Figure tests use agg backend so show doesn't work but we use it in peek
    # Recent change to astropy has made our tests emit this warning.
    ignore:'datfix' made the change:astropy.wcs.wcs.FITSFixedWarning
    ignore:'unitfix' made the change:astropy.wcs.wcs.FITSFixedWarning
    # TODO: This ones NEED to be fixed in future
    # Ignore this, oh we emit so many
    ignore::UserWarning
    # WCSAxes is raising this
    ignore:FLIP_TOP_BOTTOM is deprecated
    # This is hit on oldestdeps
    ignore:distutils Version classes are deprecated
    ignore:The default kernel will change from 'Hann' to  'Gaussian' in a future release. To suppress this warning, explicitly select a kernel with the 'kernel' argument.:FutureWarning
    ignore:The default boundary mode will change from 'ignore' to  'strict' in a future release. To suppress this warning, explicitly select a mode with the 'boundary_mode' argument.:FutureWarning

[flake8]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
max-line-length = 110

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
max_line_length = 110

[isort]
line_length = 110
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = ndcube
known_third_party = astropy,matplotlib,numpy,pytest,setuptools
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = False
length_sort = False
length_sort_sections = stdlib
skip_glob = *.rst --filter-files

[coverage:run]
omit =
  ndcube/conftest.py
  ndcube/*setup*
  ndcube/*/tests/*
  ndcube/version*
  ndcube/__init__*
  ndcube/tests/*
  */ndcube/conftest.py
  */ndcube/*setup*
  */ndcube/*/tests/*
  */ndcube/tests/*
  */ndcube/version*
  */ndcube/__init__*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
